--- a/todo/templates/todo/task_edit.html
+++ b/todo/templates/todo/task_edit.html
@@ -1,8 +1,8 @@
 {% extends 'todo/base.html' %}
 
 {% block content %}
-    <h2>New post</h2>
-    <form method="POST" class="post-form">{% csrf_token %}
+    <h2>New task</h2>
+    <form method="TASK" class="task-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
