--- a/todo/static/css/todo.css
+++ b/todo/static/css/todo.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4 {
     float: right;
 }
 
-.post-form textarea, .post-form input {
+.task-form textarea, .post-form input {
     width: 100%;
 }
 
@@ -46,10 +46,10 @@ h1, h2, h3, h4 {
     margin-right: 20px;
 }
 
-.post {
+.task {
     margin-bottom: 70px;
 }
 
-.post h2 a, .post h2 a:visited {
-    color: #000000;
+.task h2 a, .post h2 a:visited {
+    color: #00324;
 }
