--- a/todo/templates/todo/task_edit.html
+++ b/todo/templates/todo/task_edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>New task</h2>
-    <form method="TASK" class="task-form">{% csrf_token %}
+    <form method="POST" class="task-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
